fixed accordion overlapping hotbar

--- a/client/src/components/Hotbar/Hotbar.module.css
+++ b/client/src/components/Hotbar/Hotbar.module.css
@@ -22,6 +22,7 @@
     left: 0%;
     width: 100vw;
     margin-bottom: 105px;
+    z-index: 10;
 }
 
 .nav {
